# site-to-site

./: .bashzsh  App_data.c  App_data.crc  App_data.csharp  Build.csharp  Claude.md  Configuration.rst  Crc.md  Crc_table.c  Disk_guard.cpp  Lucene.cs  Lucene.csharp  Makefile  Platform.cmake  WORKSPACE.bzl  ai_studio_code (17).txt  app-get  app-get.toml  atlassian-connect.json  build.opam  llms (7).txt  namecom.api.yaml  nmap-services.scn  proxy-protocol.mdx  python3 -m pip install --user --upgrade pipx  reserved_domains.json  script.bazel  security.sh  system_api.rpc  system_api.txt  text 4.txt  text.txt
Applications/Endpoint/: namecom.api.yaml
Crc32/: entries.h
Docs/: Document.crc.mdx  Readme.md  proxy-protocol.md
Docs/services/: Claude.hs.mdx  Configuration.md  README.md  index.mdx
api.dev.name.com/: sereserved_domains.json
ngrok/: ngrok.yml
tools/: Crc.c
