#!/bin/bash

# Create folder structure
mkdir -p ai_prediction/data/raw
mkdir -p ai_prediction/data/processed
mkdir -p ai_prediction/models
mkdir -p ai_prediction/preprocessing
mkdir -p ai_prediction/reasoning
mkdir -p ai_prediction/utils
mkdir -p ai_prediction/app

# Create files with content

# models/lifespan_model.py
cat <<EOL > ai_prediction/models/lifespan_model.py
from lifelines import CoxPHFitter
import pandas as pd

class LifespanModel:
    def __init__(self):
        self.model = CoxPHFitter()

    def train(self, df):
        self.model.fit(df, duration_col='duration', event_col='event')
        print("Lifespan model trained.")

    def predict(self, df):
        return self.model.predict_survival_function(df)
EOL

# models/creation_model.py
cat <<EOL > ai_prediction/models/creation_model.py
from prophet import Prophet
import pandas as pd

class CreationModel:
    def __init__(self):
        self.model = Prophet()

    def train(self, df):
        self.model.fit(df)
        print("Creation-year model trained.")

    def predict(self, future_dates):
        return self.model.predict(future_dates)
EOL

# preprocessing/clean_data.py
cat <<EOL > ai_prediction/preprocessing/clean_data.py
def preprocess_lifespan_data(filepath):
    import pandas as pd
    df = pd.read_csv(filepath)
    # Add preprocessing steps here
    return df
EOL

# reasoning/combine_outputs.py
cat <<EOL > ai_prediction/reasoning/combine_outputs.py
def combine_predictions(lifespan_pred, creation_pred):
    return {
        "lifespan": lifespan_pred,
        "creation": creation_pred
    }
EOL

# utils/visualizations.py
cat <<EOL > ai_prediction/utils/visualizations.py
import matplotlib.pyplot as plt

def plot_survival_curve(curve):
    curve.plot()
    plt.show()
EOL

# utils/helpers.py
cat <<EOL > ai_prediction/utils/helpers.py
def print_info(msg):
    print(f"[INFO] {msg}")
EOL

# app/api.py
cat <<EOL > ai_prediction/app/api.py
from fastapi import FastAPI

app = FastAPI()

@app.get('/')
def root():
    return {"message": "AI Prediction API running"}
EOL

# app/dashboard.py
cat <<EOL > ai_prediction/app/dashboard.py
def launch_dashboard():
    print("Launching dashboard...")
EOL

# requirements.txt
cat <<EOL > ai_prediction/requirements.txt
numpy
pandas
scikit-learn
xgboost
torch
lifelines
statsmodels
prophet
matplotlib
seaborn
fastapi
uvicorn
jupyter
EOL

# README.md
cat <<EOL > ai_prediction/README.md
# AI Prediction Project
Scaffold for lifespan and creation-year prediction AI.
EOL

# run.py
cat <<EOL > ai_prediction/run.py
from preprocessing.clean_data import preprocess_lifespan_data
from models.lifespan_model import LifespanModel
from models.creation_model import CreationModel

# Load data
lifespan_df = preprocess_lifespan_data('data/raw/lifespan.csv')

# Train models
lifespan_model = LifespanModel()
lifespan_model.train(lifespan_df)

creation_model = CreationModel()
# creation_model.train(creation_df)  # Placeholder

print('AI Prediction pipeline ready!')
EOL

echo "Scaffold created in 'model/' folder!"